CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(UltrasoundIntracranialPressure)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )


#ADD_EXECUTABLE(EllipseAffine EllipseAffine.cxx)
#TARGET_LINK_LIBRARIES (EllipseAffine ${ITK_LIBRARIES} )

#ADD_EXECUTABLE(FitStem FitStem.cxx)
#TARGET_LINK_LIBRARIES (FitStem ${ITK_LIBRARIES} )

ADD_EXECUTABLE(EstimateEyeAndStem EstimateEyeAndStem.cxx OpticNerveEstimator.cxx)
TARGET_LINK_LIBRARIES (EstimateEyeAndStem ${ITK_LIBRARIES} )

